--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.1",
     "axios": "^0.27.2",
     "esbuild": "^0.14.38",
@@ -16,6 +17,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
     "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
